--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,28 @@ a {
   background-size: cover;
 }
 
+.y::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 60%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(161.94deg, #D9F3FB 19.26%, rgba(25, 118, 210, 0.5) 34.32%, rgba(57, 113, 193, 0.9) 87.7%);
+}
+
+.bus::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0%;
+  width: 100%;
+  height: 100%;
+  background: #121A33DB;
+  opacity: 86%;
+
+}
+
 .customShadow {
   box-shadow: -10px -5px 40px 0 rgba(0, 0, 0, 0.1);
 }
@@ -74,6 +96,16 @@ select option {
   background-color: #FBD007;
 }
 
+.inner-carousel {
+  display: flex;
+  width: 100%;
+}
+
+.carousel {
+  cursor: grab;
+  overflow: hidden;
+}
+
 
 @media only screen and (min-width: 991px) {
   .menu {
@@ -86,7 +118,7 @@ select option {
 
 }
 
-@media only screen and (max-width: 870px) {
+@media only screen and (max-width: 991px) {
 
   .Links,
   .Login {
@@ -103,5 +135,41 @@ select option {
 
   .Why-us img {
     width: 70%;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .aboutus-header {
+    height: 130dvh;
+  }
+
+  .content {
+    top: 20%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .aboutus-header {
+    height: 200dvh;
+  }
+
+  .content {
+    top: 15%;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .aboutus-header {
+    height: 200dvh;
+  }
+
+  .content {
+    top: 15%;
+  }
+}
+
+@media only screen and (max-width: 300px) {
+  .aboutus-header {
+    height: 250dvh;
   }
 }
