--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,13 @@ a {
 }
 
 .bus {
-  background-image: url("./assets//images/header_bus.png");
+  background: linear-gradient(161.94deg,
+      #121A33 12.26%,
+      /* Light blue at 19.26% */
+      rgba(25, 118, 210, 0.5) 34.32%,
+      /* Semi-transparent darker blue at 34.32% */
+      rgba(57, 113, 193, 0.9) 87.7%),
+    url('./assets/images/header_bus.png');
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -51,17 +57,7 @@ a {
   background: linear-gradient(161.94deg, #D9F3FB 19.26%, rgba(25, 118, 210, 0.5) 34.32%, rgba(57, 113, 193, 0.9) 87.7%);
 }
 
-.bus::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0%;
-  width: 100%;
-  height: 100%;
-  background: #121A33DB;
-  opacity: 86%;
 
-}
 
 .customShadow {
   box-shadow: -10px -5px 40px 0 rgba(0, 0, 0, 0.1);
@@ -297,13 +293,13 @@ select option {
 }
 
 .hero-section {
-  background: linear-gradient(
-    161.94deg, 
-    #121A33 12.26%, /* Light blue at 19.26% */
-    rgba(25, 118, 210, 0.5) 34.32%, /* Semi-transparent darker blue at 34.32% */
-    rgba(57, 113, 193, 0.9) 87.7%
-  ),
-  url('./assets/images/header_bus.png');
+  background: linear-gradient(161.94deg,
+      #121A33 12.26%,
+      /* Light blue at 19.26% */
+      rgba(25, 118, 210, 0.5) 34.32%,
+      /* Semi-transparent darker blue at 34.32% */
+      rgba(57, 113, 193, 0.9) 87.7%),
+    url('./assets/images/header_bus.png');
   background-size: cover;
   background-position: center;
   display: flex;
@@ -311,4 +307,3 @@ select option {
   justify-content: center;
 
 }
-
